[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sprites/actors/wizard/girl.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/actors/player.gd" type="Script" id=2]
[ext_resource path="res://assets/objects/areas/area_aggro.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/scripts/abilities/dash.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/hit.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/dash_start.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/dash_collide.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/player_low_health.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/objects/ui/ingame_menu.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/objects/ui/player_hud.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 6 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )
team = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="PlayerHUD" parent="CanvasLayer" instance=ExtResource( 10 )]

[node name="IngameMenu" parent="CanvasLayer" instance=ExtResource( 9 )]
visible = false

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.3, 0.3 )

[node name="AreaAggro" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Dash" type="Node" parent="."]
script = ExtResource( 4 )
cooldown = 3.0
duration = 0.3
cooldown_bonus = 2.0

[node name="SoundHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="SoundDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="SoundDash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="SoundKnockback" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "SFX"

[node name="SoundLowHP" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
bus = "SFX"
